Math and LogExpMath add

--- a/weighted-pool/contracts/BaseWeightedPool/Forc.toml
+++ b/weighted-pool/contracts/BaseWeightedPool/Forc.toml
@@ -2,7 +2,6 @@
 authors = ["ankit"]
 entry = "main.sw"
 license = "Apache-2.0"
-name = "FixedPoint"
+name = "BaseWeightedPool"
 
 [dependencies]
-Errors = { path = "../../helpers/BalancerErrors" }
