--- a/weighted-pool/contracts/WeightedMath/Forc.toml
+++ b/weighted-pool/contracts/WeightedMath/Forc.toml
@@ -5,6 +5,5 @@ license = "Apache-2.0"
 name = "WeightedMath"
 
 [dependencies]
-Errors = { path = "../../../sway-utils/contracts/helpers/BalancerErrors" }
 FixedPoint = { path = "../../../sway-utils/contracts/math/FixedPoint" }
-Math = { path = "../../../sway-utils/contracts/math/math" }
+math = { path = "../../../sway-utils/contracts/math/math" }
